fix: add overflow

--- a/src/Slider/Slider.css
+++ b/src/Slider/Slider.css
@@ -1,5 +1,6 @@
 .slider {
   position: relative;
+  overflow: hidden;
 }
 
 .slider-wrapper {
